--- a/package.json
+++ b/package.json
@@ -4,34 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=prod node build/index.js",
-    "watch": "cross-env NODE_ENV=dev concurrently \"tsc --watch\" \"nodemon",
+    "start": "node build/index.js",
     "build": "yarn clean && tsc && cp package.json build/package.json && cd build && zip -r terraform-lambda.zip . && cd ..",
     "test": "npx mocha \"tests/**/**/*.ts\" --require ts-node/register",
-    "coverage": "nyc mocha \"tests/**/**/*.ts\" --require ts-node/register",
     "clean": "rm -rf build",
-    "tsc": "tsc",
-    "lint": "npx eslint . --ext .ts"
+    "tsc": "tsc"
   },
-  "dependencies": {
-    "cross-env": "^7.0.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/mocha": "^9.0.0",
     "@types/node": "^14.14.37",
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
-    "@typescript-eslint/parser": "^4.20.0",
     "aws-lambda": "^1.0.7",
     "chai": "^4.3.4",
-    "codecov": "^3.8.3",
     "concurrently": "^6.0.0",
-    "coveralls": "^3.1.1",
-    "dotenv": "^10.0.0",
-    "eslint": "^7.23.0",
     "lambda-tester": "^4.0.1",
     "mocha": "^9.1.3",
-    "nodemon": "^2.0.7",
-    "nyc": "^15.1.0",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
@@ -48,16 +35,7 @@
   ],
   "author": "Gerrard Ezeugwa",
   "license": "ISC",
-  "nyc": {
-    "all": true,
-    "include": [
-      "src/**"
-    ],
-    "exclude": [
-      "**/spec/**"
-    ]
-  },
   "engines": {
-    "node": ">=14.15.0"
+    "node": ">=12.16.3"
   }
 }
