--- a/tsconfig.json
+++ b/tsconfig.json
@@ -103,6 +103,7 @@
     "node_modules",
     "node_modules/**/*",
     ".vscode/**/*",
+    ".nyc_output/**/*",
     "build/**/*",
     "tests/**/*",
     "**/**/*.test.ts"
