--- a/buildspec.yml
+++ b/buildspec.yml
@@ -29,3 +29,5 @@ phases:
       - aws s3 sync ./build/terraform-lambda.zip s3://$S3-BUCKET/$S3-BUCKET-KEY --delete
 
       - aws lambda update-function-code --function-name createEvent --s3-bucket $S3-BUCKET --s3-key $S3-BUCKET-KEY
+
+      - aws lambda update-function-code --function-name getEvent --s3-bucket $S3-BUCKET --s3-key $S3-BUCKET-KEY
