--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node build/index.js",
     "build": "yarn clean && tsc && cp package.json build/package.json && cd build && zip -r terraform-lambda.zip . && cd ..",
+    "deploy": "npm i && npm run build && chmod +x deploy.sh && deploy.sh",
     "test": "npx mocha \"tests/**/**/*.ts\" --require ts-node/register",
     "clean": "rm -rf build",
     "tsc": "tsc"
