--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs: # a collection of steps
 
       - run:
           name: install
-          command: npm run install
+          command: npm install
 
       - run: # run test
           name: test
