--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs: # a collection of steps
             npm run deploy
 
 workflows:
-  test:
+  test_build_deploy:
     jobs:
       - test
       - deploy:
